--- a/website.html
+++ b/website.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>website1</title>
+    <link rel="stylesheet" href="WEBSITE1.CSS">
 </head>
 <body><h1>ELECTRONIC DEVICES <span style="color: black;"></span></h1>
-    <video src="Y2meta.app-Explain Digital Marketing In 1 Minute Animated Explainer Video _ Mango Animate Templates-(1080p).mp4"controls loop autopplay muted style="width: 100%;" ></video>
-    <a href="https://www.flipkart.com/q/drone-camera"><img src="pexels-mikhail-nilov-6969678.jpg" alt="" height="400px" width="400px"></a>
-    <img src="pexels-cottonbro-studio-8059121.jpg" alt="" height="400px" width="400px">
-    <img src="pexels-kampus-production-8636589.jpg" alt="" height="400px" width="400px">
-
+    <video src="Y2meta.app-Explain Digital Marketing In 1 Minute Animated Explainer Video _ Mango Animate Templates-(1080p).mp4"loop autoplay muted ></video>
+    <a target="_blank" href="https://www.flipkart.com/q/drone-camera"><img src="pexels-cottonbro-studio-8059121.jpg" height="800px" width="800px"></a>
+    <img src="pexels-kampus-production-8636589.jpg" alt="" height="800px" width="800px">
+    <img src="pexels-mikhail-nilov-6969678.jpg" alt="" height="800px" width="800px">
+    
 </body>
 </html>
